--- a/SalesWebMvc/Views/Sellers/Details.cshtml
+++ b/SalesWebMvc/Views/Sellers/Details.cshtml
@@ -1,12 +1,10 @@
 ﻿@model SalesWebMvc.Models.Seller
 
 @{
-    ViewData["Title"] = "Delete";
+	ViewData["Title"] = "Details";
 }
 
-<h3>@ViewData["Title"]</h3>
-
-<h4>Are you sure you want to delete this?</h4>
+<h2>@ViewData["Title"]</h2>
 
 <div>
 	<h5>Seller</h5>
@@ -36,13 +34,16 @@
 		<dd>
 			@Html.DisplayFor(model => model.Salary)
 		</dd>
+		<dt>
+			@Html.DisplayNameFor(model => model.Department)
+		</dt>
+		<dd>
+			@Html.DisplayFor(model => model.Department.Name)	
+		</dd>
 	</dl>
-
-	<form asp-action="Delete">
-		<input type="hidden" asp-for="Id" />
-		<input type="submit" value="Delete" class="btn-xs btn-danger" />
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<a asp-action="Index" class="btn-sm btn-default">Back to List</a>
-	</form>
 </div>
-
+<div>
+	<a asp-action="Edit" asp-route-id="@Model.Id" class="btn-sm btn-default">Edit</a>
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	<a asp-action="Index" class="btn-sm btn-default">Back to list</a>
+</div>
