App locale, number and date formatting

--- a/SalesWebMvc/Views/Sellers/Details.cshtml
+++ b/SalesWebMvc/Views/Sellers/Details.cshtml
@@ -29,10 +29,10 @@
 			@Html.DisplayFor(model => model.BirthDate)
 		</dd>
 		<dt>
-			@Html.DisplayNameFor(model => model.Salary)
+			@Html.DisplayNameFor(model => model.BaseSalary)
 		</dt>
 		<dd>
-			@Html.DisplayFor(model => model.Salary)
+			@Html.DisplayFor(model => model.BaseSalary)
 		</dd>
 		<dt>
 			@Html.DisplayNameFor(model => model.Department)
