--- a/SalesWebMvc/Views/Sellers/Edit.cshtml
+++ b/SalesWebMvc/Views/Sellers/Edit.cshtml
@@ -25,8 +25,8 @@
 				<input asp-for="Seller.BirthDate" class="btn-default form-control" />
 			</div>
 			<div class="form-group">
-				<label asp-for="Seller.Salary" class="control-label"></label>
-				<input asp-for="Seller.Salary" class="btn-default form-control" />
+				<label asp-for="Seller.BaseSalary" class="control-label"></label>
+				<input asp-for="Seller.BaseSalary" class="btn-default form-control" />
 			</div>
 			<div class="form-group">
 				<label asp-for="Seller.DepartmentId" class="control-label"></label>
