--- a/SalesWebMvc/Views/Sellers/Delete.cshtml
+++ b/SalesWebMvc/Views/Sellers/Delete.cshtml
@@ -31,10 +31,10 @@
 			@Html.DisplayFor(model => model.BirthDate)
 		</dd>
 		<dt>
-			@Html.DisplayNameFor(model => model.Salary)
+			@Html.DisplayNameFor(model => model.BaseSalary)
 		</dt>
 		<dd>
-			@Html.DisplayFor(model => model.Salary)
+			@Html.DisplayFor(model => model.BaseSalary)
 		</dd>
 	</dl>
 
