--- a/SalesWebMvc/Views/Sellers/Create.cshtml
+++ b/SalesWebMvc/Views/Sellers/Create.cshtml
@@ -37,7 +37,7 @@
 			</div>
 			<div asp-validation-summary="All" class="text-danger"></div>
 			<div class="form-group">
-				<input type="submit" value="Create" class="btn btn-default" />
+				<input type="submit" value="Create" class="btn btn-primary" />
 			</div>
 		</form>
 	</div>
