--- a/SalesWebMvc/Views/Sellers/Details.cshtml
+++ b/SalesWebMvc/Views/Sellers/Details.cshtml
@@ -43,7 +43,7 @@
 	</dl>
 </div>
 <div>
-	<a asp-action="Edit" asp-route-id="@Model.Id" class="btn-sm btn-default">Edit</a>
+	<a asp-action="Edit" asp-route-id="@Model.Id" class="btn-sm btn-primary">Edit</a>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	<a asp-action="Index" class="btn-sm btn-default">Back to list</a>
 </div>
