--- a/SalesWebMvc/Views/Sellers/Edit.cshtml
+++ b/SalesWebMvc/Views/Sellers/Edit.cshtml
@@ -38,7 +38,7 @@
 			</div>
 			<div asp-validation-summary="All" class="text-danger"></div>
 			<div class="form-group">
-				<input type="submit" value="Save" class="btn btn-default" />
+				<input type="submit" value="Save" class="btn btn-primary" />
 			</div>
 		</form>
 	</div>
