--- a/SalesWebMvc/Views/SalesRecords/SimpleSearch.cshtml
+++ b/SalesWebMvc/Views/SalesRecords/SimpleSearch.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<SalesWebMvc.Models.SalesRecord>
+﻿@using System.Globalization
+
+@model IEnumerable<SalesWebMvc.Models.SalesRecord>
 
 @{
 	ViewData["Title"] = "Simple Search";
@@ -23,14 +25,14 @@
 		</form>
 	</div>
 </nav>
-<div class="panel panel-primary">
+<div class="panel panel-default">
 	<div class="panel-heading">
-		<h3 class="panel-title">Total sales = @Model.Sum(obj => obj.Amount).ToString("F2")</h3>
+		<h5 class="panel-info">Total sales = @Model.Sum(obj => obj.Amount).ToString("N", CultureInfo.CurrentCulture)</h5>
 	</div>
 	<div class="panel-body">
 		<table class="table table-striped table-hover">
 			<thead>
-				<tr class="success">
+				<tr class="text-success">
 					<th>
 						@Html.DisplayNameFor(model => model.Id)
 					</th>
